--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg" href="./src/assets/zao-coffee-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>早咖啡 Zao Coffee | 早療。咖啡</title>
   </head>
   <body>
     <div id="app" class="mx-auto w-screen bg-[#f3c517]/60 lg:max-w-5xl">
