feat: 🎸 new background color pair

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>早咖啡 Zao Coffee | 早療。咖啡</title>
   </head>
   <body>
-    <div id="app" class="mx-auto w-screen bg-[#f3c517]/60 lg:max-w-5xl">
+    <div id="app" class="mx-auto w-screen bg-[#f3c517]/70 lg:max-w-5xl">
       <header
-        class="flex w-full items-baseline justify-start bg-[#f3c517] py-4 px-6 text-center"
+        class="flex w-full items-baseline justify-start bg-[#40220f] py-4 px-6 text-center"
       >
         <img
           src="./src/assets/zao-coffee-icon.svg"
